# proxy-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: hermes-proxy-workflow.md
scripts/: hermes_proxy_chat.py  proxy-agent-service.sh  proxy-agent.service.example
src/proxy_agent/: __init__.py  api_models.py  app.py  cli_runner.py  config.py  cursor_stream.py  main.py  prompts.py  sse.py  streaming.py
src/proxy_agent/api/: __init__.py  deps.py  router.py
src/proxy_agent/core/: __init__.py  config.py
src/proxy_agent/schemas/: __init__.py  messages_prompt.py  openai.py
src/proxy_agent/services/: __init__.py  cli_runner.py  cursor_cli_codec.py  sse_keepalive.py
tests/: conftest.py  test_api.py  test_cli_runner.py  test_config_defaults.py  test_cursor_cli_codec.py  test_messages_prompt.py  test_ndjson_adapter.py  test_openai.py  test_sse_keepalive.py
tests/fixtures/: cursor_stream_then_hang.py  fake_agent.py  fake_cursor_stream_json.py  print_json_result.py  print_long_assistant_ndjson.py  print_plain_line.sh  stream_lines.py
