[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxy-agent"
version = "0.1.0"
description = "OpenAI-compatible HTTP proxy for a local agent CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
proxy-agent = "proxy_agent.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/proxy_agent"]

[tool.hatch.build.targets.sdist]
include = ["src/proxy_agent", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
